--- a/datawinners/media/css/scss/section_application.scss
+++ b/datawinners/media/css/scss/section_application.scss
@@ -19,7 +19,7 @@
 
 #container_content, #container_wizard {
   overflow: hidden;
-  min-height: 600px;
+  //min-height: 600px;
   background: $app-bg url($app-bg-img) repeat-x top left !important;
   padding-bottom: 30px;
   .content {
